--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <li><a href="archivos/Python para principiantes.pdf" download class="neon"><b style="color: yellowgreen;">-- Documento 1 (PDF):</b> Python para principiantes </a></li>
 
                 <li><a href="archivos/dados(siono).py" download class="neon"><b style="color: yellowgreen;">-- Documento 2 (Script Python): </b> desarrollo de toma de decisiones Dados (Si / No)</a></li>
-                <li><a href="./presentación.html" download class="neon"><b style="color: yellowgreen;">-- Presentación (PPTX):</b> Link para presentar mi propuesta de grado</a></li>
+                <li><a href="./presentación.html" class="neon"><b style="color: yellowgreen;">-- Presentación (PPTX):</b> Link para presentar mi propuesta de grado</a></li>
             </ul>
         </div>
     </section>
