Fix HTML structure and enhance comments section

--- a/medios/reproductordevideo/index.html
+++ b/medios/reproductordevideo/index.html
@@ -124,7 +124,7 @@ La última escena muestra a los dos amigos de Khoma en el seminario, pintando al
 
 
     <footer>
-        <p>© 2024 Transmisión de Videos</p>
+        <p>© 2024 Transmisión de Videos    ||||   Stephany la adoro muchooo!! ❤️ </p>
     </footer>
 
    
@@ -269,3 +269,4 @@ onSnapshot(commentsRef, (snapshot) => {
 
 </body>
 </html>
+
